syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string firstName = 1;
  string lastName = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimeRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  rpc GreetManyTimes(GreetManyTimeRequest) returns (stream GreetManyTimesResponse) {};
}